Use (Java21) Math.clamp instead of nested Math.max and Math.min